--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" type="text/css" href=".\assets\css\style.css" >
 </head>
 <body>
-    
+    <header>
+        <h1>Scotty Yackzan</h1>
+        <div>
+            <ul>
+                <li>Bio</li>
+                <li>Portfolio</li>
+                <li>Contact Me</li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
