Created Header Element w/ styling attributes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Scotty Yackzan</h1>
-        <div>
+        <div class="align-items-center">
             <ul>
                 <li>Bio</li>
                 <li>Portfolio</li>
