Added Info Boxes into HTML - styling index-header element

--- a/index.html
+++ b/index.html
@@ -11,13 +11,26 @@
 <body>
     <header>
         <h1>Scotty Yackzan</h1>
-        <div class="align-items-center">
+        <nav>
             <ul>
                 <li>Bio</li>
                 <li>Portfolio</li>
                 <li>Contact Me</li>
             </ul>
-        </div>
+        </nav>
     </header>
+    <article>
+        <h2 class="info-header">About Me...</h2>
+        <section>
+            <p>What it's like to be a Turkey.</p>
+        </section>
+        <div>
+            <img src="#" alt="Scotty's Photo" />
+        </div>
+    </article>
+    <br>
+    <main>
+        <h3 class="info-header">Portfolio</h3>
+    </main>
 </body>
 </html>
