Wrapped About Me Box with Photo

--- a/index.html
+++ b/index.html
@@ -22,10 +22,21 @@
     <article>
         <h2 class="info-header">About Me...</h2>
         <section>
-            <p>What it's like to be a Turkey.</p>
+            <p>
+                Knight Rider, a shadowy flight into the dangerous world of a man who does not exist. Michael Knight, a young loner on a 
+                crusade to champion the cause of the innocent, the helpless in a world of criminals who operate above the law.
+
+                80 days around the world, we’ll find a pot of gold just sitting where the rainbow’s ending. Time — we’ll fight against the time, and we’ll 
+                fly on the white wings of the wind. 80 days around the world, no we won’t say a word before the ship is really back. Round, round, all around the world. Round, all around the world. R
+                ound, all around the world. Round, all around the world.
+
+                Mutley, you snickering, floppy eared hound. When courage is needed, you’re never around. Those medals you wear on your moth-eaten 
+                chest should be there for bungling at which you are best. So, stop that pigeon, stop that pigeon, stop that pigeon, stop that pigeon, stop that pigeon, stop that 
+                pigeon, stop that pigeon. Howwww! Nab him, jab him, tab him, grab him, stop that pigeon now. 
+            </p>
         </section>
-        <div>
-            <img src="#" alt="Scotty's Photo" />
+        <div id="photo-right">
+            <img src=".\assets\images\images1.png" alt="Scotty's Photo" />
         </div>
     </article>
     <br>
