Changed single h1 element into separate section - changed to display flex - added margin around <h> - added border around photo

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
             </ul>
         </nav>
     </header>
-    <article>
+
+    <section>
         <h2 class="info-header">About Me...</h2>
+    </section>
+    <article>
         <section>
             <p>
                 Knight Rider, a shadowy flight into the dangerous world of a man who does not exist. Michael Knight, a young loner on a 
@@ -35,13 +38,16 @@
                 pigeon, stop that pigeon. Howwww! Nab him, jab him, tab him, grab him, stop that pigeon now. 
             </p>
         </section>
-        <div id="photo-right">
-            <img src=".\assets\images\images1.png" alt="Scotty's Photo" />
+        <div id="image-container mainborder">
+            <img class="mainborder" id="auto-size" src=".\assets\images\images1.png" alt="Scotty's Photo" />
         </div>
     </article>
     <br>
+    <section class="info-header">
+        <h3>Portfolio</h3>
+    </section>
     <main>
-        <h3 class="info-header">Portfolio</h3>
+
     </main>
 </body>
 </html>
