Added Website Boxes with Flex & Added Footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <section>
         <h2 class="info-header">About Me...</h2>
     </section>
+
     <article>
         <section class="text mainborder">
             <p>
@@ -73,7 +74,53 @@
         <h3>Portfolio</h3>
     </section>
     <main>
+        <div class="linkbox row justify-center">
+            <img class="fit mainborder" src="#" alt="Website" />
+        </div>
 
+        <div class="linkbox row justify-center">
+            <img class="fit mainborder" src="#" alt="Website" />
+        </div>
+
+        <div class="linkbox row justify-center">
+            <img class="fit mainborder" src="#" alt="Website" />
+        </div>
+
+        <div class="linkbox row justify-center">
+            <img class="fit mainborder" src="#" alt="Website" />
+        </div>
+
+        <div class="linkbox row justify-center">
+            <img class="fit mainborder" src="#" alt="Website" />
+        </div>
+
+        <div class="linkbox row justify-center">
+            <img class="fit mainborder" src="#" alt="Website" />
+        </div>
+
+        <div class="linkbox row justify-center">
+            <img class="fit mainborder" src="#" alt="Website" />
+        </div>
+
+        <div class="linkbox row justify-center">
+            <img class="fit mainborder" src="#" alt="Website" />
+        </div>
     </main>
+
+    <footer>
+        <div class="footer">
+            <ul>
+                <li>
+                    <a>syackzan@gmail.com</a>
+                </li>
+                <li>
+                    <a>LinkedIn Profile</a>
+                </li>
+                <li>
+                    <a>Github Profile</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
