Added Inside Box-Shadow & Updated Chelsea Link image & Photo

--- a/index.html
+++ b/index.html
@@ -75,35 +75,35 @@
     </section>
     <main>
         <div class="linkbox row justify-center">
-            <img class="fit mainborder" src="#" alt="Website" />
+            <a href="https://syackzan.github.io/MP---Landing-Page-/"><img class="fit miniborder" id="sizingchel" src=".\assets\images\chelsea1.png" alt="Chelsa Fan Website" /></a>
         </div>
 
         <div class="linkbox row justify-center">
-            <img class="fit mainborder" src="#" alt="Website" />
+            <img class="fit miniborder" src="#" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
-            <img class="fit mainborder" src="#" alt="Website" />
+            <img class="fit miniborder" src="#" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
-            <img class="fit mainborder" src="#" alt="Website" />
+            <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
-            <img class="fit mainborder" src="#" alt="Website" />
+            <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
-            <img class="fit mainborder" src="#" alt="Website" />
+            <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
-            <img class="fit mainborder" src="#" alt="Website" />
+            <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
-            <img class="fit mainborder" src="#" alt="Website" />
+            <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
         </div>
     </main>
 
