--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
         <h1>Scotty Yackzan</h1>
         <nav>
             <ul>
-                <li>Bio</li>
-                <li>Portfolio</li>
-                <li>Contact Me</li>
+                <li>
+                    <a href="#aboutme">Bio</a>
+                </li>
+                <li>
+                    <a href="#portfolio">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contactme">Contact Me</a>
+                </li>
             </ul>
         </nav>
     </header>
 
     <section>
-        <h2 class="info-header">About Me...</h2>
+        <h2 class="info-header" id="aboutme">About Me...</h2>
     </section>
 
     <article>
@@ -71,7 +77,7 @@
     </article>
     <br>
     <section class="info-header">
-        <h3>Portfolio</h3>
+        <h3 id="portfolio">Portfolio</h3>
     </section>
     <main>
         <div class="linkbox row justify-center">
@@ -108,7 +114,7 @@
     </main>
 
     <footer>
-        <div class="footer">
+        <div class="footer" id="contactme">
             <ul>
                 <li>
                     <a>syackzan@gmail.com</a>
