--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         </nav>
     </header>
 
-    <section>
-        <h2 class="info-header" id="aboutme">About Me...</h2>
+    <section class="info-header">
+        <h2 id="aboutme">About Me...</h2>
+        <button class="buttonclose">-</button>
     </section>
 
     <article>
@@ -72,7 +73,7 @@
             </p>
         </section>
         <div id="image-container mainborder">
-            <img class="mainborder" style="height: 100%" src=".\assets\images\images1.png" alt="Scotty's Photo" />
+            <img class="mainborder" id="margin" style="height: 100%" src=".\assets\images\images1.png" alt="Scotty's Photo" />
         </div>
     </article>
     <br>
