Added a Collapse Button

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <br>
     <section class="info-header">
         <h3 id="portfolio">Portfolio</h3>
+        <button class="buttonclose">-</button>
     </section>
     <main>
         <div class="linkbox row justify-center">
