Included Links to Contact Me Footer

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
         <div class="footer" id="contactme">
             <ul>
                 <li>
-                    <a>syackzan@gmail.com</a>
+                    <a href="mailto:syackzan@gmail.com">syackzan@gmail.com</a>
                 </li>
                 <li>
-                    <a>LinkedIn Profile</a>
+                    <a href="https://www.linkedin.com/in/scotty-yackzan-1427b335/">LinkedIn Profile</a>
                 </li>
                 <li>
-                    <a>Github Profile</a>
+                    <a href="https://github.com/syackzan">Github Profile</a>
                 </li>
             </ul>
         </div>
