Added a Javascript file

--- a/index.html
+++ b/index.html
@@ -130,5 +130,7 @@
             </ul>
         </div>
     </footer>
+
+    <script type="text/jss" src=".\assets\javascript\myscript.js"></script>
 </body>
 </html>
