Added Button Functionality - Collapsing Article & Main Elements when Button is pressed

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
     <section class="info-header">
         <h2 id="aboutme">About Me...</h2>
-        <button class="buttonclose">-</button>
+        <input onclick="change()" type="button" value="-" id="ab-button"></input>
     </section>
 
-    <article>
+    <article id="article">
         <section class="text mainborder">
             <p>
                 Knight Rider, a shadowy flight into the dangerous world of a man who does not exist. Michael Knight, a young loner on a 
@@ -79,9 +79,9 @@
     <br>
     <section class="info-header">
         <h3 id="portfolio">Portfolio</h3>
-        <button class="buttonclose">-</button>
+        <input onclick="change()" type="button" value="-" id="p-button"></input>
     </section>
-    <main>
+    <main id="main">
         <div class="linkbox row justify-center">
             <a href="https://syackzan.github.io/MP---Landing-Page-/"><img class="fit miniborder" id="sizingchel" src=".\assets\images\chelsea1.png" alt="Chelsa Fan Website" /></a>
         </div>
@@ -131,6 +131,6 @@
         </div>
     </footer>
 
-    <script type="text/jss" src=".\assets\javascript\myscript.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
