Changed Filler Text within About Me to more specific text

--- a/index.html
+++ b/index.html
@@ -34,42 +34,36 @@
     <article id="article">
         <section class="text mainborder">
             <p>
-                Knight Rider, a shadowy flight into the dangerous world of a man who does not exist. Michael Knight, a young loner on a 
-                crusade to champion the cause of the innocent, the helpless in a world of criminals who operate above the law.
-
-                80 days around the world, we’ll find a pot of gold just sitting where the rainbow’s ending. Time — we’ll fight against the time, and we’ll 
-                fly on the white wings of the wind. 80 days around the world, no we won’t say a word before the ship is really back. Round, round, all around the world. Round, all around the world. R
-                ound, all around the world. Round, all around the world.
-
-                Mutley, you snickering, floppy eared hound. When courage is needed, you’re never around. Those medals you wear on your moth-eaten 
-                chest should be there for bungling at which you are best. So, stop that pigeon, stop that pigeon, stop that pigeon, stop that pigeon, stop that pigeon, stop that 
-                pigeon, stop that pigeon. Howwww! Nab him, jab him, tab him, grab him, stop that pigeon now. 
+                Hi, my name is Scotty Yackzan and I am a Programmer <(^_^)>
             </p>
             <br>
             <p>
-                Knight Rider, a shadowy flight into the dangerous world of a man who does not exist. Michael Knight, a young loner on a 
-                crusade to champion the cause of the innocent, the helpless in a world of criminals who operate above the law.
-
-                80 days around the world, we’ll find a pot of gold just sitting where the rainbow’s ending. Time — we’ll fight against the time, and we’ll 
-                fly on the white wings of the wind. 80 days around the world, no we won’t say a word before the ship is really back. Round, round, all around the world. Round, all around the world. R
-                ound, all around the world. Round, all around the world.
-
-                Mutley, you snickering, floppy eared hound. When courage is needed, you’re never around. Those medals you wear on your moth-eaten 
-                chest should be there for bungling at which you are best. So, stop that pigeon, stop that pigeon, stop that pigeon, stop that pigeon, stop that pigeon, stop that 
-                pigeon, stop that pigeon. Howwww! Nab him, jab him, tab him, grab him, stop that pigeon now. 
+                Now, Let's get to the real reasons why you're here. My talents:
             </p>
+            <ul id="ulstyle">
+                <li>
+                    <b>Knowledge: </b>I am well versed in several programmer languages ranging from C++, HTML, CSS, Javascript, & React.  
+                </li>
+                <li>
+                    <b>Communication: </b> I pride myself on communication. My phone is my office. Expect a return call or text within 15 minutes if I'm your programmer. 
+                </li>
+                <li>
+                    <b>Management: </b>People are the secrete ingrediant. Most people think management is about telling others what to do when infact a manager's role is simply support for the team. 
+                </li>
+                <li>
+                    <b>Speed: </b>Less about speed and more about efficiency. 
+                </li>
+                <li>
+                    <b>Team Player: </b>Ever since I was a little kid I've always enjoyed playing team sports over solo. It feels better when everyone wins together. 
+                </li>
+                <li>
+                    <b>Big-Picture Focus: </b>Structure is everything in programming. What do you want? A more difficult question then some clients think, but once that question is solved, the rest falls into place. 
+                </li>
+            </ul>
             <br>
             <p>
-                Knight Rider, a shadowy flight into the dangerous world of a man who does not exist. Michael Knight, a young loner on a 
-                crusade to champion the cause of the innocent, the helpless in a world of criminals who operate above the law.
-
-                80 days around the world, we’ll find a pot of gold just sitting where the rainbow’s ending. Time — we’ll fight against the time, and we’ll 
-                fly on the white wings of the wind. 80 days around the world, no we won’t say a word before the ship is really back. Round, round, all around the world. Round, all around the world. R
-                ound, all around the world. Round, all around the world.
-
-                Mutley, you snickering, floppy eared hound. When courage is needed, you’re never around. Those medals you wear on your moth-eaten 
-                chest should be there for bungling at which you are best. So, stop that pigeon, stop that pigeon, stop that pigeon, stop that pigeon, stop that pigeon, stop that 
-                pigeon, stop that pigeon. Howwww! Nab him, jab him, tab him, grab him, stop that pigeon now. 
+                I look forward to working with you! Please check out my portfolio below. Hopefully, what I showcase will help you understand
+                a little more about my skill. Most of what I said above is fluff - unless I can back it up!
             </p>
         </section>
         <div id="image-container mainborder">
