Added Media Query for Header Size - Increase on mobile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <b>Team Player: </b>Ever since I was a little kid I've always enjoyed playing team sports over solo. It feels better when everyone wins together. 
                 </li>
                 <li>
-                    <b>Big-Picture Focus: </b>Structure is everything in programming. What do you want? A more difficult question then some clients think, but once that question is solved, the rest falls into place. 
+                    <b>Big-Picture Focus: </b>Structure is everything in programming. What do you want? A more difficult question than some clients think, but once that question is solved, the rest falls into place. 
                 </li>
             </ul>
             <br>
