Fixed and annotated minimizer buttons

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <br>
     <section class="info-header">
         <h3 id="portfolio">Portfolio</h3>
-        <input onclick="change()" type="button" value="-" id="p-button"></input>
+        <input onclick="changeme()" type="button" value="-" id="p-button"></input>
     </section>
     <main id="main">
         <div class="linkbox row justify-center">
