Re-sized Buttons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
     <section class="info-header">
         <h2 id="aboutme">About Me...</h2>
-        <input onclick="change()" type="button" value="-" id="ab-button"></input>
+        <div class="buttonbox">
+            <input onclick="change()" type="button" value="-" id="ab-button"></input>
+        </div>   
     </section>
 
     <article id="article">
@@ -73,7 +75,9 @@
     <br>
     <section class="info-header">
         <h3 id="portfolio">Portfolio</h3>
-        <input onclick="changeme()" type="button" value="-" id="p-button"></input>
+        <div class="buttonbox">
+            <input onclick="changeme()" type="button" value="-" id="p-button"></input>
+        </div>
     </section>
     <main id="main">
         <div class="linkbox row justify-center">
