Added Mini-Headers to Portfolio Boxes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
         </div>
     </section>
     <main id="main">
+        
         <div class="linkbox row justify-center">
+            <h5 class="mini-text">HTML/CSS</h5>
             <a href="https://syackzan.github.io/MP---Landing-Page-/"><img class="fit miniborder" id="sizingchel" src=".\assets\images\chelsea1.png" alt="Chelsa Fan Website" /></a>
         </div>
 
