Copied h5 to every portfolio box

--- a/index.html
+++ b/index.html
@@ -87,30 +87,37 @@
         </div>
 
         <div class="linkbox row justify-center">
+            <h5 class="mini-text">Holder</h5>
             <img class="fit miniborder" src="#" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
+            <h5 class="mini-text">Holder</h5>
             <img class="fit miniborder" src="#" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
+            <h5 class="mini-text">Holder</h5>
             <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
+            <h5 class="mini-text">Holder</h5>
             <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
+            <h5 class="mini-text">Holder</h5>
             <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
+            <h5 class="mini-text">Holder</h5>
             <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
         </div>
 
         <div class="linkbox row justify-center">
+            <h5 class="mini-text">Holder</h5>
             <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
         </div>
     </main>
