Updated Links to real applications underneath the projects tab

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
             <ul id="ulstyle">
                 <li>
-                    <b>Knowledge: </b>I am well versed in several programmer languages ranging from C++, HTML, CSS, Javascript, & React.  
+                    <b>Knowledge: </b>I am well versed in several programmer languages ranging from C++, HTML, CSS, Javascript, Jquery, Moment.js, Bootstrap, Widgets & React.  
                 </li>
                 <li>
                     <b>Communication: </b> I pride myself on communication. My phone is my office. Expect a return call or text within 15 minutes if I'm your programmer. 
@@ -81,44 +81,64 @@
     </section>
     <main id="main">
         
-        <div class="linkbox row justify-center">
-            <h5 class="mini-text">HTML/CSS</h5>
-            <a href="https://syackzan.github.io/MP---Landing-Page-/"><img class="fit miniborder" id="sizingchel" src=".\assets\images\chelsea1.png" alt="Chelsa Fan Website" /></a>
+        <div id="parentBox1" class="linkbox row justify-center">
+            <h5 class="mini-text" style="text-align: center">Gambling Website</h5>
+            <div class="popups" id="popup1" style="display: none; position: absolute; z-index: 9"><p>Want a place to quickly bet on a sport of your choice? Well click into "The Degenerate" to place a bet now!</p></div>
+            <a id="box1" href="https://syackzan.github.io/The-Degenerate/" class="fit">
+                <img class="fit miniborder" id="sizingchel" src=".\assets\images\gambler.png" alt="Gambling Website" />
+            </a>
+        </div>
+
+        <div id="parentBox2" class="linkbox row justify-center">
+            <h5 class="mini-text">Weather Dashboard</h5>
+            <div class="popups" id="popup2" style="display: none; position: absolute; z-index: 9"><p>Find the weather of any city in the United States via this application. Store your searchs for quick access!</p></div>
+            <a id="box2" href="https://syackzan.github.io/Weather-Dashboard/" class="fit">
+                <img class="fit miniborder" id="sizingchel" src=".\assets\images\weatherDB.png" alt="Weather Dashboard" />
+            </a>
+        </div>
+
+        <div id="parentBox3" class="linkbox row justify-center">
+            <h5 class="mini-text">Day Planner</h5>
+            <div class="popups" id="popup3" style="display: none; position: absolute; z-index: 9"><p>Plan your day with this application. Save and store your tasks. It's easy to see what hour you're in by the task bar color!</p></div>
+            <a id="box3" href="https://syackzan.github.io/Day-Calendar/" class="fit">
+                <img class="fit miniborder" id="sizingchel" src=".\assets\images\dayPlanner.png" alt="Day Planner" />
+            </a>
+        </div>
+
+        <div id="parentBox4" class="linkbox row justify-center">
+            <h5 id="box4" class="mini-text">Code Generator</h5>
+            <div class="popups" id="popup4" style="display: none; position: absolute; z-index: 9"><p>Quickly generate a code between 8-129 digits long. Include Upper & Lowercase letters, Numbers, and Symbols!</p></div>
+            <a href="https://syackzan.github.io/Code-Generator-v1/" class="fit">
+                <img class="fit miniborder" id="sizingchel" src=".\assets\images\codeGenerator.png" alt="Code Generator" />
+            </a>
         </div>
 
         <div class="linkbox row justify-center">
-            <h5 class="mini-text">Holder</h5>
-            <img class="fit miniborder" src="#" alt="Website" />
+            <h5 class="mini-text">Place Holder</h5>
+            <a id="box5" href="https://syackzan.github.io/Code-Generator-v1/" class="fit">
+                <img class="fit miniborder" id="sizingchel" src=".\assets\images\placeHolder2.jpg" alt="Code Generator" />
+            </a>
         </div>
 
         <div class="linkbox row justify-center">
-            <h5 class="mini-text">Holder</h5>
-            <img class="fit miniborder" src="#" alt="Website" />
+            <h5 class="mini-text">Place Holder</h5>
+            <a id="box6" href="#" class="fit">
+                <img class="fit miniborder" id="sizingchel" src=".\assets\images\placeHolder2.jpg" alt="N/A" />
+            </a>
         </div>
 
         <div class="linkbox row justify-center">
-            <h5 class="mini-text">Holder</h5>
-            <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
+            <h5 class="mini-text">Place Holder</h5>
+            <a id="box7" href="#" class="fit">
+                <img class="fit miniborder" id="sizingchel" src=".\assets\images\placeHolder2.jpg" alt="N/A" />
+            </a>
         </div>
 
         <div class="linkbox row justify-center">
-            <h5 class="mini-text">Holder</h5>
-            <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
-        </div>
-
-        <div class="linkbox row justify-center">
-            <h5 class="mini-text">Holder</h5>
-            <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
-        </div>
-
-        <div class="linkbox row justify-center">
-            <h5 class="mini-text">Holder</h5>
-            <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
-        </div>
-
-        <div class="linkbox row justify-center">
-            <h5 class="mini-text">Holder</h5>
-            <img class="fit miniborder" src=".\assets\images\placeholder1.png" alt="Website" />
+            <h5 class="mini-text">Place Holder</h5>
+            <a id="box8" href="#" class="fit">
+                <img class="fit miniborder" id="sizingchel" src=".\assets\images\placeHolder2.jpg" alt="N/A" />
+            </a>
         </div>
     </main>
 
