Added downloadable Resume

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <li>
                     <a href="#contactme">Contact Me</a>
                 </li>
+                <li>
+                    <a href="./assets/pdf/syCR.pdf">Resume</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -113,10 +116,11 @@
             </a>
         </div>
 
-        <div class="linkbox row justify-center">
+        <div id="parentBox5" class="linkbox row justify-center">
             <h5 class="mini-text">Place Holder</h5>
-            <a id="box5" href="https://syackzan.github.io/Code-Generator-v1/" class="fit">
-                <img class="fit miniborder" id="sizingchel" src=".\assets\images\placeHolder2.jpg" alt="Code Generator" />
+            <div class="popups" id="popup5" style="display: none; position: absolute; z-index: 9"><p>Take a short coding quiz to test your knowledge. Be quick though as there is a timer!</p></div>
+            <a id="box5" href="https://syackzan.github.io/Pop-Quiz-Coding-Basics/" class="fit">
+                <img class="fit miniborder" id="sizingchel" src=".\assets\images\codingQuiz.png" alt="Pop Quiz" />
             </a>
         </div>
 
