Working on Mobile Display

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </p>
         </section>
         <div id="image-container mainborder">
-            <img class="mainborder" id="margin" style="height: 100%" src=".\assets\images\images1.png" alt="Scotty's Photo" />
+            <img class="mainborder" id="margin" style="height: 100%; width: 100%" src=".\assets\images\images1.png" alt="Scotty's Photo" />
         </div>
     </article>
     <br>
