--- a/index.html
+++ b/index.html
@@ -1,167 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yackzans Portfolio</title>
-    <link rel="stylesheet" type="text/css" href=".\assets\css\reset.css" >
-    <link rel="stylesheet" type="text/css" href=".\assets\css\style.css" >
-</head>
-<body>
-    <header>
-        <h1>Scotty Yackzan</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#aboutme">Bio</a>
-                </li>
-                <li>
-                    <a href="#portfolio">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#contactme">Contact Me</a>
-                </li>
-                <li>
-                    <a href="./assets/pdf/syCR.pdf">Resume</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <title>Document</title>
 
-    <section class="info-header">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
+</head>
+
+<body>
+
+    <!-- Navbar Element -->
+    <div class="navbar">
+        <div>
+            <h1>Scotty Yackzan</h1>
+        </div>
+        <div>
+            <a class="liMargin" href="#aboutme">Bio</a>
+            <a class="liMargin" href="#portfolio">Portfolio</a>
+            <a class="liMargin" href="#contactme">Contact Me</a>
+            <a class="liMargin" href="./assets/pdf/syCR.pdf">Resume</a>
+        </div>
+    </div>
+
+    <section class="header1">
         <h2 id="aboutme">About Me...</h2>
         <div class="buttonbox">
             <input onclick="change()" type="button" value="-" id="ab-button"></input>
-        </div>   
+        </div>
     </section>
 
-    <article id="article">
-        <section class="text mainborder">
-            <p>
-                Hi, my name is Scotty Yackzan and I am a Programmer <(^_^)>
-            </p>
-            <br>
-            <p>
-                Now, Let's get to the real reasons why you're here. My talents:
-            </p>
-            <ul id="ulstyle">
-                <li>
-                    <b>Knowledge: </b>I am well versed in several programmer languages ranging from C++, HTML, CSS, Javascript, Jquery, Moment.js, Bootstrap, Widgets & React.  
-                </li>
-                <li>
-                    <b>Communication: </b> I pride myself on communication. My phone is my office. Expect a return call or text within 15 minutes if I'm your programmer. 
-                </li>
-                <li>
-                    <b>Management: </b>People are the secrete ingrediant. Most people think management is about telling others what to do when infact a manager's role is simply support for the team. 
-                </li>
-                <li>
-                    <b>Speed: </b>Less about speed and more about efficiency. 
-                </li>
-                <li>
-                    <b>Team Player: </b>Ever since I was a little kid I've always enjoyed playing team sports over solo. It feels better when everyone wins together. 
-                </li>
-                <li>
-                    <b>Big-Picture Focus: </b>Structure is everything in programming. What do you want? A more difficult question than some clients think, but once that question is solved, the rest falls into place. 
-                </li>
-            </ul>
-            <br>
-            <p>
-                I look forward to working with you! Please check out my portfolio below. Hopefully, what I showcase will help you understand
-                a little more about my skill. Most of what I said above is fluff - unless I can back it up!
-            </p>
-        </section>
-        <div id="image-container mainborder">
-            <img class="mainborder" id="margin" style="height: 100%; width: 100%" src=".\assets\images\images1.png" alt="Scotty's Photo" />
+    <div class="jumbotron aboutMe">
+        <div class="row d-flex flex-wrap">
+            <section class="col-md-12 flex-fill meContent mainBorder">
+                <img class="mainBorder img1" src=".\assets\images\images1.png" alt="Scotty's Photo" />
+                <p>
+                    Hi, my name is Scotty Yackzan and I am a Programmer <(^_^)>
+                </p>
+                <br>
+                <p>
+                    Now, Let's get to the real reasons why you're here. My talents:
+                </p>
+                <ul id="ulstyle">
+                    <li>
+                        <b>Knowledge: </b>I am well versed in several programmer languages ranging from C++, HTML, CSS,
+                        Javascript, Jquery, node.js, mySql, Sequelize, Handlebars, Bcrypt, Moment.js, Bootstrap,
+                        Widgets, node.js, .
+                    </li>
+                    <li>
+                        <b>Communication: </b> I pride myself on communication. My phone is my office. Expect a return
+                        call or text within 15 minutes if I'm your programmer.
+                    </li>
+                    <li>
+                        <b>Management: </b>People are the secrete ingrediant. Most people think management is about
+                        telling others what to do when infact a manager's role is simply support for the team.
+                    </li>
+                    <li>
+                        <b>Speed: </b>Less about speed and more about efficiency.
+                    </li>
+                    <li>
+                        <b>Team Player: </b>Ever since I was a little kid I've always enjoyed playing team sports over
+                        solo. It feels better when everyone wins together.
+                    </li>
+                    <li>
+                        <b>Big-Picture Focus: </b>Structure is everything in programming. What do you want? A more
+                        difficult question than some clients think, but once that question is solved, the rest falls
+                        into place.
+                    </li>
+                </ul>
+                <br>
+                <p>
+                    I look forward to working with you! Please check out my portfolio below. Hopefully, what I showcase
+                    will help you understand
+                    a little more about my skill. Most of what I said above is fluff - unless I can back it up!
+                </p>
+            </section>
+            </article>
         </div>
-    </article>
-    <br>
-    <section class="info-header">
-        <h3 id="portfolio">Portfolio</h3>
+    </div>
+
+    <section class="header1" id="portfolio">
+        <h2 id="aboutme">Portfolio</h2>
         <div class="buttonbox">
-            <input onclick="changeme()" type="button" value="-" id="p-button"></input>
+            <input onclick="change()" type="button" value="-" id="ab-button"></input>
         </div>
     </section>
-    <main id="main">
-        
-        <div id="parentBox1" class="linkbox row justify-center">
-            <h5 class="mini-text" style="text-align: center">Gambling Website</h5>
-            <div class="popups" id="popup1" style="display: none; position: absolute; z-index: 9"><p>Want a place to quickly bet on a sport of your choice? Well click into "The Degenerate" to place a bet now!</p></div>
-            <a id="box1" href="https://syackzan.github.io/The-Degenerate/" class="fit">
-                <img class="fit miniborder" id="sizingchel" src=".\assets\images\gambler.png" alt="Gambling Website" />
-            </a>
+
+    <div class="jumbotron aboutMe">
+
+        <section class=" header2">
+            <h2 id="aboutme"><u>Full Stack Programs</u></h2>
+        </section>
+        <div class="row d-flex flex-wrap">
+            <div class="col-md-6 columnDiv">
+                <div class="order">
+                    <a href="https://sheltered-lake-23144.herokuapp.com/"
+                        style="margin: 10px; text-decoration: none; width: 100%">
+                        <section class="mainBorder formatSection">
+                            <img class="formatImage" src=".\assets\images\onTrack.png">
+                            <h2 class="formatHeader">onTrack</h2>
+                            <p class="formatHidden" id="box1">Track your construction Project by tracking scope &
+                                posting photos of completed work!</p>
+                        </section>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6 columnDiv">
+                <div class="order">
+                    <a href="https://cryptic-sands-14911.herokuapp.com/"
+                        style="margin: 10px; text-decoration: none; width: 100%">
+                        <section class="mainBorder formatSection">
+                            <img class="formatImage" src=".\assets\images\techblog.png">
+                            <h2 class="formatHeader">Tech Blog</h2>
+                            <p class="formatHidden" id="box1">Link up with like minded coders. Post your Blog & let
+                                people comment while you help others aswell!</p>
+                        </section>
+                    </a>
+                </div>
+            </div>
         </div>
 
-        <div id="parentBox2" class="linkbox row justify-center">
-            <h5 class="mini-text">Weather Dashboard</h5>
-            <div class="popups" id="popup2" style="display: none; position: absolute; z-index: 9"><p>Find the weather of any city in the United States via this application. Store your searchs for quick access!</p></div>
-            <a id="box2" href="https://syackzan.github.io/Weather-Dashboard/" class="fit">
-                <img class="fit miniborder" id="sizingchel" src=".\assets\images\weatherDB.png" alt="Weather Dashboard" />
-            </a>
+        <section class="header2">
+            <h2 id="aboutme"><u>Front End Programs</u></h2>
+        </section>
+        <div class="row d-flex flex-wrap">
+            <div class="col-md-3 columnDiv">
+                <div class="order">
+                    <a href="https://syackzan.github.io/The-Degenerate/"
+                        style="margin: 10px; text-decoration: none; width: 100%">
+                        <section class="mainBorder formatSection">
+                            <img class="formatImage" src=".\assets\images\gambler.png">
+                            <h2 class="formatHeader">The Degenerate</h2>
+                            <p class="formatHidden" id="box1">Want a place to quickly bet on a sport of your choice?
+                                Well click into "The Degenerate" to place a
+                                bet now!</p>
+                        </section>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-3 columnDiv">
+                <div class="order">
+                    <a href="https://syackzan.github.io/Weather-Dashboard/"
+                        style="margin: 10px; text-decoration: none; width: 100%">
+                        <section class="mainBorder formatSection">
+                            <img class="formatImage" src=".\assets\images\weatherDB.png">
+                            <h2 class="formatHeader">Weather Dashboard</h2>
+                            <p class="formatHidden" id="box1">Find the weather of any city in the United States via this
+                                application. Store your searchs for quick
+                                access!</p>
+                        </section>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-3 columnDiv">
+                <div class="order">
+                    <a href="https://syackzan.github.io/Day-Calendar/"
+                        style="margin: 10px; text-decoration: none; width: 100%">
+                        <section class="mainBorder formatSection">
+                            <img class="formatImage" src=".\assets\images\dayPlanner.png">
+                            <h2 class="formatHeader">Code Generator</h2>
+                            <p class="formatHidden" id="box1">Plan your day with this application. Save and store your
+                                tasks. It's easy to see what hour you're in
+                                by the task bar color!</p>
+                        </section>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-3 columnDiv">
+                <div class="order">
+                    <a href="https://syackzan.github.io/Code-Generator-v1/"
+                        style="margin: 10px; text-decoration: none; width: 100%">
+                        <section class="mainBorder formatSection">
+                            <img class="formatImage" src=".\assets\images\codeGenerator.png">
+                            <h2 class="formatHeader">Day Planner</h2>
+                            <p class="formatHidden" id="box1">Quickly generate a code between 8-129 digits long. Include
+                                Upper & Lowercase letters, Numbers, and
+                                Symbols!</p>
+                        </section>
+                    </a>
+                </div>
+            </div>
         </div>
+    </div>
 
-        <div id="parentBox3" class="linkbox row justify-center">
-            <h5 class="mini-text">Day Planner</h5>
-            <div class="popups" id="popup3" style="display: none; position: absolute; z-index: 9"><p>Plan your day with this application. Save and store your tasks. It's easy to see what hour you're in by the task bar color!</p></div>
-            <a id="box3" href="https://syackzan.github.io/Day-Calendar/" class="fit">
-                <img class="fit miniborder" id="sizingchel" src=".\assets\images\dayPlanner.png" alt="Day Planner" />
-            </a>
+    <section class="header2">
+        <h2 id="aboutme"><u>Back End Programs</u></h2>
+    </section>
+    <div class="row d-flex flex-wrap">
+        <div class="col-md-3 columnDiv">
+            <div class="order">
+                <a href="https://guarded-retreat-79950.herokuapp.com/"
+                    style="margin: 10px; text-decoration: none; width: 100%">
+                    <section class="mainBorder formatSection">
+                        <img class="formatImage" src=".\assets\images\notetaker.png">
+                        <h2 class="formatHeader">Note Taker</h2>
+                        <p class="formatHidden" id="box1">Keep Track of your To-Dos with this application</p>
+                    </section>
+                </a>
+            </div>
         </div>
-
-        <div id="parentBox4" class="linkbox row justify-center">
-            <h5 id="box4" class="mini-text">Code Generator</h5>
-            <div class="popups" id="popup4" style="display: none; position: absolute; z-index: 9"><p>Quickly generate a code between 8-129 digits long. Include Upper & Lowercase letters, Numbers, and Symbols!</p></div>
-            <a href="https://syackzan.github.io/Code-Generator-v1/" class="fit">
-                <img class="fit miniborder" id="sizingchel" src=".\assets\images\codeGenerator.png" alt="Code Generator" />
-            </a>
+        <div class="col-md-3 columnDiv">
+            <div class="order">
+                <a href="https://www.youtube.com/watch?v=7UEdc37f40I"
+                    style="margin: 10px; text-decoration: none; width: 100%">
+                    <section class="mainBorder formatSection">
+                        <img class="formatImage" src=".\assets\images\ecommerce.png">
+                        <h2 class="formatHeader">E-commerce Back End</h2>
+                        <p class="formatHidden" id="box1">An application displaying proper Route Functions</p>
+                    </section>
+                </a>
+            </div>
         </div>
-
-        <div id="parentBox5" class="linkbox row justify-center">
-            <h5 class="mini-text">Place Holder</h5>
-            <div class="popups" id="popup5" style="display: none; position: absolute; z-index: 9"><p>Take a short coding quiz to test your knowledge. Be quick though as there is a timer!</p></div>
-            <a id="box5" href="https://syackzan.github.io/Pop-Quiz-Coding-Basics/" class="fit">
-                <img class="fit miniborder" id="sizingchel" src=".\assets\images\codingQuiz.png" alt="Pop Quiz" />
-            </a>
+        <div class="col-md-3 columnDiv">
+            <div class="order">
+                <a href="https://www.youtube.com/watch?v=KaOJYunXeBo"
+                    style="margin: 10px; text-decoration: none; width: 100%">
+                    <section class="mainBorder formatSection">
+                        <img class="formatImage" src=".\assets\images\teamprofile.png">
+                        <h2 class="formatHeader">Team Generator</h2>
+                        <p class="formatHidden" id="box1">An application allowing a user to generate their team onto a profile page</p>
+                    </section>
+                </a>
+            </div>
         </div>
-
-        <div class="linkbox row justify-center">
-            <h5 class="mini-text">Place Holder</h5>
-            <a id="box6" href="#" class="fit">
-                <img class="fit miniborder" id="sizingchel" src=".\assets\images\placeHolder2.jpg" alt="N/A" />
-            </a>
+        <div class="col-md-3 columnDiv">
+            <div class="order">
+                <a href="https://www.youtube.com/watch?v=cC1MKmIArhY"
+                    style="margin: 10px; text-decoration: none; width: 100%">
+                    <section class="mainBorder formatSection">
+                        <img class="formatImage" src=".\assets\images\employeetracker.png">
+                        <h2 class="formatHeader">Employee Tracker</h2>
+                        <p class="formatHidden" id="box1">An application to keep track of your employees, roles, and departments!</p>
+                    </section>
+                </a>
+            </div>
         </div>
-
-        <div class="linkbox row justify-center">
-            <h5 class="mini-text">Place Holder</h5>
-            <a id="box7" href="#" class="fit">
-                <img class="fit miniborder" id="sizingchel" src=".\assets\images\placeHolder2.jpg" alt="N/A" />
-            </a>
-        </div>
-
-        <div class="linkbox row justify-center">
-            <h5 class="mini-text">Place Holder</h5>
-            <a id="box8" href="#" class="fit">
-                <img class="fit miniborder" id="sizingchel" src=".\assets\images\placeHolder2.jpg" alt="N/A" />
-            </a>
-        </div>
-    </main>
+    </div>
+    </div>
 
     <footer>
         <div class="footer" id="contactme">
-            <ul>
-                <li>
-                    <a href="mailto:syackzan@gmail.com">syackzan@gmail.com</a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/scotty-yackzan-1427b335/">LinkedIn Profile</a>
-                </li>
-                <li>
-                    <a href="https://github.com/syackzan">Github Profile</a>
-                </li>
-            </ul>
+            <a class="liMargin" href="mailto:syackzan@gmail.com">syackzan@gmail.com</a>
+            <a class="liMargin" href="https://www.linkedin.com/in/scotty-yackzan-1427b335/">LinkedIn Profile</a>
+            <a class="liMargin" href="https://github.com/syackzan">Github Profile</a>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 </html>
