added a query to size of full stack programs

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                 <ul id="ulstyle">
                     <li>
                         <b>Knowledge: </b>I am well versed in several programmer languages ranging from C++, HTML, CSS,
-                        Javascript, Jquery, node.js, mySql, Sequelize, Handlebars, Bcrypt, Moment.js, Bootstrap,
-                        Widgets, node.js, .
+                        Javascript, Jquery, node.js, mySql, Sequelize, Handlebars, Bcrypt, Moment.js, Bootstrap, node.js, express.
                     </li>
                     <li>
                         <b>Communication: </b> I pride myself on communication. My phone is my office. Expect a return
@@ -100,7 +99,7 @@
                 <div class="order">
                     <a href="https://sheltered-lake-23144.herokuapp.com/"
                         style="margin: 10px; text-decoration: none; width: 100%">
-                        <section class="mainBorder formatSection">
+                        <section class="mainBorder formatSection bigger">
                             <img class="formatImage" src=".\assets\images\onTrack.png">
                             <h2 class="formatHeader">onTrack</h2>
                             <p class="formatHidden" id="box1">Track your construction Project by tracking scope &
@@ -113,7 +112,7 @@
                 <div class="order">
                     <a href="https://cryptic-sands-14911.herokuapp.com/"
                         style="margin: 10px; text-decoration: none; width: 100%">
-                        <section class="mainBorder formatSection">
+                        <section class="mainBorder formatSection bigger">
                             <img class="formatImage" src=".\assets\images\techblog.png">
                             <h2 class="formatHeader">Tech Blog</h2>
                             <p class="formatHidden" id="box1">Link up with like minded coders. Post your Blog & let
